<resources>
    <string name="app_name">DistanceTracker</string>

    // Permission Fragment
    <string name="continue_text">Tiếp tục</string>
    <string name="permission_description"> Chào mừng bạn tới Distance Tracker.
        Để sử dụng ứng dụng, trước tiên chúng tôi cần bạn cho phép truy cập vị trí của bạn.
        Nếu không, chúng tôi không thể cung cấp cho bạn dịch vụ của chúng tôi.
        Nếu bạn đồng ý và muốn tiếp tục hãy nhấn vào nút bên dưới.</string>
    <string name="permission_required">Cần sự cho phép</string>

    // Maps Fragment
    <string name="reset">Reset</string>
    <string name="stop">Dừng</string>
    <string name="start">Bắt đầu</string>
    <string name="tap_on_my_location_button">Vị trí của bạn</string>
    <string name="_3">3</string>

    // Result Fragment
    <string name="distance">Khoảng cách</string>
    <string name="time">Thời gian</string>
    <string name="share">Share</string>
    <string name="result">%1$s km</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="_0_0km">0.0km</string>

    //search
    <string name="search">Tìm kiếm</string>




</resources>